--- a/template1/assets/css/style.css
+++ b/template1/assets/css/style.css
@@ -14,6 +14,15 @@ body {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
+hr{
+    border: 0;
+    background-color: #c8c8c8;
+    display: block;
+    width: 100%;
+    height: 1px;
+    margin: 40px 0;
+
+}
 
 /*Container - див, центрирующий контент*/
 .container {
@@ -217,15 +226,22 @@ h1, h2, h3, h4, h5, h6 {
     padding: 80px 0;
 }
 
+.section--devices{
+    padding-bottom: 0;
+   background: url("../images/devices-bg.jpg") center no-repeat;
+    background-size: cover;
+    -webkit-background-size: cover;
+}
+
 .section__header {
-    margin: 0 auto 40px;
+    margin: 0 auto 50px;
     text-align: center;
     width: 100%;
     max-width: 950px;
 }
 
 .section__suptitle {
-color: #333333;
+    color: #333333;
     font-size: 24px;
     font-family: 'Kaushan Script', cursive;
 }
@@ -237,7 +253,7 @@ color: #333333;
     text-transform: uppercase;
 }
 
-.section__title:after{
+.section__title:after {
     content: "";
     display: block;
     background-color: #f38181;
@@ -252,36 +268,43 @@ color: #333333;
 }
 
 /*ABOUT*/
-.about{
+.about {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
 }
-.about__item{
+
+.about__item {
     background-color: aqua;
     width: 380px;
 
     position: relative;
 }
-.about__item:hover .about__image{
+
+.about__item:hover .about__image {
     transform: translate3d(-10px, -10px, 0);
 }
-.about__item:hover .about__text{
+
+.about__item:hover .about__text {
     opacity: 1;
 }
-.about__item:hover .about__image img{
+
+.about__item:hover .about__image img {
     opacity: 0.1;
 
 }
-.about__image{
-    background: linear-gradient(to bottom,#f38181,#fce38a);
+
+.about__image {
+    background: linear-gradient(to bottom, #f38181, #fce38a);
     transition: transform .2s linear;
 }
-.about__image img{
+
+.about__image img {
     transition: opacity .1s linear;
     display: block;
 }
-.about__text{
+
+.about__text {
 
     font-size: 18px;
     color: white;
@@ -297,19 +320,19 @@ color: #333333;
     top: 50%;
     left: 0;
     z-index: 2;
-    transform: translate3d(0,-50%, 0);
+    transform: translate3d(0, -50%, 0);
 }
-
 
 /*statistics*/
-.statistics{
+.statistics {
     background-color: aqua;
 }
-.stat{
+
+.stat {
     display: flex;
 }
 
-.stat__item{
+.stat__item {
     /*все колонки одинаковой ширины*/
     flex: 1 1 0;
     padding: 70px 25px;
@@ -317,18 +340,68 @@ color: #333333;
     text-align: center;
     color: white;
 }
-.stat__item:last-child{
-    border-right:1px solid white;
+
+.stat__item:last-child {
+    border-right: 1px solid white;
 }
 
-.stat_count{
+.stat_count {
     font-weight: bold;
     font-size: 72px;
     line-height: 1;
 }
 
-.stat__text{
-   text-transform: uppercase;
+.stat__text {
+    text-transform: uppercase;
     font-size: 14px;
     margin-bottom: 10px;
+}
+
+/*SERVICES*/
+.services {
+    display: flex;
+}
+
+.services__item {
+    flex: 1 1 0;
+    padding-left: 85px;
+    position: relative;
+    padding-right: 35px;
+}
+
+.services__icon {
+    position: absolute;
+    top: 0;
+    left: 28px;
+    z-index: 1;
+}
+
+.services__text {
+    color: #999999;
+    font-size: 15px;
+}
+
+.services__title {
+    margin-bottom: 10px;
+
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+}
+
+/*devices*/
+.devices{
+    position: relative;
+    margin: 0 auto;
+    width: 100%;
+    max-width: 600px;
+}
+.devices__item{
+    display: block;
+}
+.devices__item--iphone{
+    position: absolute;
+    bottom: -80px;
+    right: 0;
+    z-index: 1;
 }
