--- a/template1/assets/css/style.css
+++ b/template1/assets/css/style.css
@@ -14,7 +14,8 @@ body {
 h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
-hr{
+
+hr {
     border: 0;
     background-color: #c8c8c8;
     display: block;
@@ -226,11 +227,20 @@ hr{
     padding: 80px 0;
 }
 
-.section--devices{
+.section--devices {
+    margin-bottom: 40px;
     padding-bottom: 0;
-   background: url("../images/devices-bg.jpg") center no-repeat;
+    background: url("../images/devices-bg.jpg") center no-repeat;
     background-size: cover;
     -webkit-background-size: cover;
+}
+
+.section--gray {
+    background-color: #f8f8f8;
+}
+
+.section--clients {
+    background: url(../images/clients-bg.jpg) center no-repeat;
 }
 
 .section__header {
@@ -267,44 +277,48 @@ hr{
     font-size: 15px;
 }
 
-/*ABOUT*/
-.about {
+/*card*/
+.card {
     margin-top: 80px;
     display: flex;
     justify-content: space-between;
 }
 
-.about__item {
-    background-color: aqua;
+.card__item {
+    /*background-color: aqua;*/
     width: 380px;
 
     position: relative;
 }
 
-.about__item:hover .about__image {
+.card__inner {
+    background-color: aqua;
+}
+
+.card__item:hover .card__image {
     transform: translate3d(-10px, -10px, 0);
 }
 
-.about__item:hover .about__text {
+.card__item:hover .card__text {
     opacity: 1;
 }
 
-.about__item:hover .about__image img {
+.card__item:hover .card__image img {
     opacity: 0.1;
 
 }
 
-.about__image {
+.card__image {
     background: linear-gradient(to bottom, #f38181, #fce38a);
     transition: transform .2s linear;
 }
 
-.about__image img {
+.card__image img {
     transition: opacity .1s linear;
     display: block;
 }
 
-.about__text {
+.card__text {
 
     font-size: 18px;
     color: white;
@@ -321,6 +335,25 @@ hr{
     left: 0;
     z-index: 2;
     transform: translate3d(0, -50%, 0);
+}
+
+.card__info {
+    margin-top: 20px;
+    text-align: center;
+}
+
+.card__name {
+    margin-bottom: 5px;
+    text-transform: uppercase;
+    color: #333333;
+    font-size: 14px;
+}
+
+.card__prof {
+    color: #999999;
+    font-weight: 300;
+    font-size: 15px;
+    font-style: italic;
 }
 
 /*statistics*/
@@ -390,18 +423,336 @@ hr{
 }
 
 /*devices*/
-.devices{
+.devices {
     position: relative;
     margin: 0 auto;
     width: 100%;
     max-width: 600px;
 }
-.devices__item{
+
+.devices__item {
     display: block;
 }
-.devices__item--iphone{
+
+.devices__item--iphone {
     position: absolute;
     bottom: -80px;
     right: 0;
     z-index: 1;
 }
+
+/* we do*/
+
+.wedo {
+    display: flex;
+}
+
+.wedo__item {
+    flex: 1 1 0;
+}
+
+/*accordion*/
+.accordion__item {
+    border: 1px solid #e5e5e5;
+    margin-bottom: 10px;
+}
+
+.accordion__item.active .accordion_content {
+    display: block;
+}
+
+.accordion__item.active .accordion__header:after {
+    transform: rotate(-45deg);
+    margin-top: -5px;
+}
+
+.accordion__item.active .accordion__header {
+    border-bottom: 1px solid #e5e5e5;
+}
+
+.accordion__header {
+    cursor: pointer;
+    border-bottom: 1px solid transparent;
+    padding: 15px 30px 15px 65px;
+    position: relative;
+}
+
+.accordion__header:after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-top: 2px solid #cccccc;
+    border-right: 2px solid #cccccc;
+
+    position: absolute;
+    top: 50%;
+    right: 20px;
+    z-index: 1;
+    transform: translateY(-50%) rotate(135deg);
+}
+
+.accordion__icon {
+    position: absolute;
+    top: 50%;
+    z-index: 1;
+    left: 20px;
+    transform: translateY(-50%);
+
+}
+
+.accordion_content {
+    padding: 15px 20px;
+    font-size: 15px;
+    color: #999999;
+    font-style: italic;
+    font-weight: 300;
+    display: none;
+}
+
+.accordion__title {
+    font-size: 14px;
+    color: #333333;
+    text-transform: uppercase;
+}
+
+/*reviews*/
+
+.reviews {
+    padding: 0 110px;
+    position: relative;
+}
+
+.reviews__author {
+    color: #333333;
+    font-family: 'Kaushan Script', cursive;
+    font-size: 24px;
+}
+
+.reviews__author:before {
+    content: "";
+    display: inline-block;
+    vertical-align: middle;
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin-right: 10px;
+
+}
+
+.reviews__item {
+    position: relative;
+    padding-left: 255px;
+}
+
+.reviews__photo {
+    z-index: 1;
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: 2px solid aquamarine;
+
+    border-radius: 50%;
+}
+
+.reviews__text {
+    color: #999999;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 24px;
+    margin-bottom: 15px;
+}
+
+.reviews__button {
+    top: 50%;
+    position: absolute;
+    transform: translateY(-50%);
+    z-index: 1;
+    font-size: 0;
+    color: transparent;
+}
+
+.reviews__button:after {
+    content: "";
+    display: block;
+    width: 16px;
+    height: 16px;
+    border-top: 2px solid #cccccc;
+    border-left: 2px solid #cccccc;
+    transform: rotate(-45deg);
+}
+
+.reviews__button--pref {
+    left: 0;
+}
+
+.reviews__button--next {
+    right: 0;
+    transform: translateY(-50%) rotate(180deg);
+}
+
+/*SOCIAL*/
+.social {
+    display: flex;
+    justify-content: center;
+}
+
+.social_item {
+    text-decoration: none;
+    background-color: #fce38a;
+    border-right: 1px solid #f38181;
+    color: #f38181;
+    font-size: 30px;
+    padding: 12px 10px;
+    line-height: 1;
+    height: 55px;
+    width: 55px;
+    transition: background-color .1s linear, color .1s linear;
+}
+
+.social_item:hover {
+    background-color: #f38181;
+    color: #ffffff;
+}
+
+.social_item:last-child {
+    border: 1px solid transparent;
+}
+
+/*logos*/
+.logos {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /*выравнивание вертикал в flex*/
+}
+
+/*WORKS*/
+.works {
+    display: flex;
+
+}
+
+.works__col {
+    flex: 1 1 0;
+}
+
+.works__item {
+    position: relative;
+
+    background: linear-gradient(to bottom, #f38181, #fce38a);
+
+}
+
+.works__item:hover .works__img {
+    opacity: .1;
+}
+
+.works__item:hover .works__info {
+    opacity: 1;
+}
+
+.works__img {
+    /*адаптивность у картинок*/
+    max-width: 100%;
+    height: auto;
+
+    display: block; /*чтобы не было отступа*/
+    transition: opacity .2s linear; /*умньшаем прозрачность для градиента*/
+}
+
+.works__info {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    transform: translate3d(0, -50%, 0);
+
+    transition: opacity .2s linear;
+
+    opacity: 0;
+
+    text-align: center;
+    color: white;
+    padding: 0 15px;
+}
+
+.works__title {
+    text-transform: uppercase;
+    font-size: 14px;
+    margin-bottom: 5px;
+}
+
+.works__text {
+    font-style: italic;
+    font-size: 15px;
+    font-weight: 300;
+}
+
+/*CLIENTS*/
+
+.clients {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 70px;
+    /*чтобы колонки могли перескакивать на новую строку*/
+}
+
+.clients__item {
+    width: 50%;
+    padding: 0 45px 0 175px;
+    position: relative;
+    margin-bottom: 60px;
+}
+
+.clients__photo{
+    position: absolute;
+    top: 0;
+    left: 40px;
+    z-index: 1;
+
+    /*для круглых фото*/
+    border-radius: 50%;
+
+    width: 110px;
+    height: 110px;
+
+}
+
+.clients__name{
+    margin-bottom: 5px;
+
+    color: #333333;
+    text-transform: uppercase;
+    font-size: 14px;
+
+}
+
+.clients__prof{
+    font-style: italic;
+    font-weight: 300;
+    color: #333333;
+    font-size: 15px;
+}
+
+.clients__text{
+    color: #999999;
+    font-size: 15px;
+}
+
+
+.clients__text:before{
+    content: "";
+    display: block;
+    background-color: #f38181;
+    width: 60px;
+    height: 3px;
+    margin: 15px 0 15px 0;
+}
+
+
+
+
+
+
+
