--- a/template1/assets/css/style.css
+++ b/template1/assets/css/style.css
@@ -30,6 +30,7 @@ hr {
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 0 15px;
 }
 
 /*Intro*/
@@ -287,15 +288,16 @@ hr {
 
 /*card*/
 .card {
-    margin-top: 80px;
+    margin: 80px -15px 0 -15px;
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 .card__item {
     /*background-color: aqua;*/
-    width: 380px;
-
+    width: 33.3%;
+    padding: 0 15px;
     position: relative;
 }
 
@@ -324,6 +326,8 @@ hr {
 .card__image img {
     transition: opacity .1s linear;
     display: block;
+    width: 100%;
+    height: auto;
 }
 
 .card__text {
@@ -371,6 +375,7 @@ hr {
 
 .stat {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .stat__item {
@@ -401,13 +406,18 @@ hr {
 /*SERVICES*/
 .services {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .services__item {
-    flex: 1 1 0;
-    padding-left: 85px;
+    width: 33.3%;
     position: relative;
-    padding-right: 35px;
+    margin-bottom: 40px;
+    padding: 0 35px 40px 85px;
+}
+
+.services__item--border {
+    border-bottom: 1px solid #e5e5e5;
 }
 
 .services__icon {
@@ -810,13 +820,14 @@ hr {
     text-transform: uppercase;
     color: #333333;
 }
-.blog__title a{
+
+.blog__title a {
     text-decoration: none;
     color: inherit;
     cursor: pointer;
 }
 
-.blog__content{
+.blog__content {
     padding-bottom: 14px;
 }
 
@@ -829,35 +840,36 @@ hr {
     font-weight: 300;
 }
 
-.blog__stat__item{
+.blog__stat__item {
     display: inline-block;
     vertical-align: top;
     margin-right: 10px;
 }
 
-.blog__stat__item i{
+.blog__stat__item i {
     color: aquamarine;
     margin-right: 5px;
 }
 
 /*MAP*/
-.map{
+.map {
     text-align: center;
 }
 
-.map__title{
-   color: #f38181;
+.map__title {
+    color: #f38181;
     font-size: 24px;
-    font-weight:bold;
+    font-weight: bold;
 }
-.map__title a{
+
+.map__title a {
     color: inherit;
     text-decoration: none;
     text-transform: uppercase;
     cursor: pointer;
 }
 
-.map__title:after{
+.map__title:after {
     content: "";
     display: block;
     background-color: #f38181;
@@ -866,3 +878,324 @@ hr {
     margin: 15px auto 0
 }
 
+/*FOOTER*/
+
+.footer {
+    padding-top: 65px;
+    background-color: #f8f8f8;
+}
+
+.footer__inner {
+    padding-bottom: 65px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__logo {
+    margin-bottom: 30px;
+    color: #cccccc;
+    font-weight: 700;
+    font-size: 46px;
+}
+
+.footer__text {
+    margin-bottom: 30px;
+    color: #999999;
+    font-size: 15px;
+}
+
+.footer__social {
+    margin-bottom: 25px;
+}
+
+.footer__social--header {
+    border-bottom: 1px solid #e5e5e5;
+    font-size: 14px;
+    color: #333333;
+    padding-bottom: 20px;
+}
+
+.footer__social--header b {
+    font-size: 18px;
+}
+
+.footer__social--content {
+    padding-top: 20px;
+    font-size: 15px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.footer__social--content a {
+    font-size: 18px;
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: 10px;
+    color: aquamarine;
+}
+
+.footer__col--first {
+    width: 40%;
+}
+
+.footer__col--second {
+    width: 30%;
+}
+
+.footer__col--third {
+    width: 22%;
+}
+
+.footer__title {
+    color: #333333;
+    font-size: 14px;
+    text-transform: uppercase;
+    margin-bottom: 30px;
+    margin-top: 35px;
+}
+
+/*SUBSCRIBE*/
+
+.subscribe {
+    width: 100%;
+    max-width: 380px;
+    display: flex;
+}
+
+.subscribe__button {
+    height: 45px;
+    width: 40%;
+    padding: 12px 30px;
+    line-height: 1.1;
+    background: aquamarine;
+    border: 0;
+    font-size: 14px;
+    color: white;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+}
+
+.subscribe__button:hover {
+    background-color: #23ffe2;
+}
+
+.subscribe__input {
+    width: 60%;
+    line-height: 1.1;
+    background: #f8f8f8;
+    border: 1px solid #e7e7e7;
+    font-size: 15px;
+    color: #999999;
+    font-style: italic;
+    font-weight: 300;
+    padding: 12px;
+    font-family: 'Montserrat', sans-serif
+}
+
+.subscribe__input::placeholder {
+    color: #cccccc;
+}
+
+.subscribe__input:focus {
+    outline: 0;
+}
+
+.subscribe__button:focus {
+    outline: 0;
+}
+
+/*BLOGS*/
+
+.blogs__item {
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.blogs__img {
+    width: 120px;
+    height: 80px;
+}
+
+.blogs__content {
+    padding-left: 20px;
+    align-self: center;
+}
+
+.blogs__title {
+    display: block;
+    line-height: 1.5;
+    color: #333333;
+    font-size: 12px;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.blogs__date {
+    color: #cccccc;
+    font-style: italic;
+    font-weight: 300;
+    font-size: 13px;
+}
+
+/*INSTAGRAM*/
+
+.instagram {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.instagram__item {
+    flex: 1 1 0;
+    width: 33.33%;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+.instagram__img {
+    display: block;
+}
+
+/*COPYRIGHT*/
+.copyright {
+    border-top: 1px solid #e5e5e5;
+    padding: 20px 0;
+    text-align: center;
+    font-size: 14px;
+    color: #333333;
+
+}
+
+.copyright span {
+    color: #f38181;
+}
+
+@media (max-width: 1230px) {
+
+    /*Intro*/
+    .intro__suptitle {
+        font-size: 52px;
+    }
+
+    .intro__title {
+        font-size: 120px;
+    }
+}
+
+@media (max-width: 990px) {
+    /*Intro*/
+    .intro__suptitle {
+        font-size: 32px;
+    }
+
+    .intro__title {
+        font-size: 80px;
+    }
+
+    .stat {
+        justify-content: center;
+    }
+
+    .stat__item {
+        flex: none;
+        width: 33.333%;
+        border: 0;
+        padding: 30px;
+    }
+
+    .stat__item:last-child {
+        border: 0;
+    }
+
+    .services__item {
+        width: 50%;
+        padding-bottom: 0;
+    }
+
+    .services__item--border {
+        border: 0;
+    }
+}
+
+@media (max-width: 770px) {
+    .nav {
+        display: none;
+    }
+
+    .slider__item.active :before {
+        width: 50%;
+    }
+
+    .slider__text {
+        display: none;
+    }
+
+    .section {
+        padding: 40px 0;
+    }
+
+    .card {
+        justify-content: center;
+        margin-top: 40px;
+    }
+
+    .card__item {
+        width: 100%;
+        max-width: 410px;
+        margin-bottom: 30px;
+    }
+
+    .card__item:last-child {
+        margin-bottom: 0;
+    }
+    .services{
+        justify-content: center;
+    }
+
+    .services__item {
+        width: 100%;
+        max-width: 410px;
+        padding-left: 55px;
+        padding-right: 0;
+    }
+
+    .services__icon {
+        left: 0;
+    }
+}
+
+@media (max-width: 575px) {
+    /*Intro*/
+    .intro__suptitle {
+        font-size: 22px;
+    }
+
+    .intro__title {
+        font-size: 40px;
+    }
+
+    .section__title {
+        font-size: 24px;
+    }
+
+    .section__title:after {
+        margin: 20px auto;
+    }
+
+    .section__suptitle {
+        font-size: 20px;
+    }
+
+    .section__header {
+        margin-bottom: 30px;
+    }
+
+    .stat__item {
+        width: 100%;
+    }
+
+    .stat_count {
+        font-size: 52px;
+    }
+}
