--- a/template3/css/index.css
+++ b/template3/css/index.css
@@ -37,6 +37,14 @@ h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
 
+li {
+    list-style-type: none;
+}
+ul {
+    margin-left: 0;
+    padding-left: 0;
+}
+
 img {
     max-width: 100%;
     height: auto;
@@ -73,6 +81,7 @@ h2.title__blue__line:after {
     margin: 0 auto;
 }
 
+
 /*BUTTONS*/
 .btn {
     font-weight: 500;
@@ -92,11 +101,27 @@ h2.title__blue__line:after {
     background-color: #1B7DFF;
 }
 
+.btn--more {
+    background-color:  #006DFE;
+    padding: 15px 20px;
+
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.2;
+
+    /*width: 118px;*/
+}
+
 .btn--search:hover, .btn--search:active, .btn--search:focus {
     background-color: #1b65c9;
 }
 
-.btn__learn__more {
+.btn--more:hover, .btn--more:active, .btn--more:focus {
+    background-color: #005FD6;
+}
+
+.btn__arrow {
     text-transform: uppercase;
     font-size: 16px;
     line-height: 1.5;
@@ -110,11 +135,11 @@ h2.title__blue__line:after {
     transition: border-bottom .7s linear;
 }
 
-.btn__learn__more:focus, .btn__learn__more:hover {
+.btn__arrow:focus, .btn__arrow:hover {
     border-bottom: 1px #006DFE solid;
 }
-
 /*BUTTONS==========================================================*/
+
 
 /*HEADER*/
 .header {
@@ -122,6 +147,18 @@ h2.title__blue__line:after {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 100;
+
+    transition: background-color, padding-bottom .2s linear;
+}
+
+.header.active {
+    background-color: #0E1D28;
+    padding-bottom: 25px;
+}
+
+.header.active .header__inner {
+    margin: 25px 100px 0 100px;
 }
 
 .header__inner {
@@ -130,9 +167,11 @@ h2.title__blue__line:after {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: flex-end;
-}
 
+    transition: margin .2s linear;
+}
 /*HEADER===============================================*/
+
 
 /*NAV*/
 .nav {
@@ -155,8 +194,8 @@ h2.title__blue__line:after {
 .nav__link:hover, .nav__link:focus, .nav__link:active {
     opacity: .7;
 }
-
 /*NAV================================================*/
+
 
 /*INTRO*/
 .intro {
@@ -232,11 +271,10 @@ h2.title__blue__line:after {
 .search__input:focus::placeholder {
     opacity: .5;
 }
-
 /*INTRO========================================================*/
 
-/*BENEFITS*/
 
+/*BENEFITS*/
 .benefits__inner {
     background-color: white;
     box-shadow: 0 2px 20px rgba(21, 24, 36, 0.15993);
@@ -277,8 +315,8 @@ h2.title__blue__line:after {
     line-height: 1.5;
     margin-bottom: 40px;
 }
-
 /*BENEFITS=====================================================*/
+
 
 /*PLACES*/
 .places {
@@ -300,7 +338,7 @@ h2.title__blue__line:after {
 .places__cards {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
-    grid-gap: 10px;
+    gap: 10px;
 }
 
 .places__card {
@@ -365,8 +403,211 @@ h2.title__blue__line:after {
     color: transparent;
     z-index: 4;
 }
-
 /*PLACES========================================================*/
 
 
+/*TOURS*/
+.tours{
+    margin-bottom: 140px;
+}
 
+.tours__tour{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    gap: 0 78px;
+    align-items: center;
+    margin-bottom: 75px;
+}
+
+.tours__tour__img{
+    transition: transform .7s linear;
+}
+
+.last__item{
+    order: 1;
+}
+
+.tours__tour__img:hover{
+    transform: scale(1.02);
+}
+
+.tours__tour__info{
+    padding: 0 30px 0 35px;
+}
+
+.tours__tour__title{
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.3;
+    color: #102746;
+
+    margin-bottom: 85px;
+}
+
+.tours__tour__text{
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #102746;
+    margin-bottom: 60px;
+}
+/*TOURS=========================================================*/
+
+
+/*TOP PLACES*/
+.top{
+    margin-bottom: 145px;
+}
+
+.top__header{
+    margin-bottom: 55px;
+}
+
+.top__cards{
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 58px;
+}
+
+.top__card__pic{
+    position: relative;
+    margin-bottom: 45px;
+}
+
+.top__card__stat{
+    width: 100%;
+    height: 55px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    background: rgba(21, 24, 36, 0.6);
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 0 25px;
+
+    transition: height .1s linear;
+}
+
+.top__card:hover .top__card__stat{
+    height: 60px;
+}
+
+.top__card__title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.3;
+    color: #FFFFFF;
+    text-transform: uppercase;
+}
+
+.top__card__reaction{
+    display: flex;
+}
+
+.top__card__number{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #FFFFFF;
+    margin-right: 10px;
+}
+
+.top__card__icon{
+    margin-right: 15px;
+}
+
+.top__card__icon:last-child{
+    margin-right: 0;
+}
+
+.top__card__text{
+    margin-bottom: 55px;
+
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #102746;
+    max-height: 75px;
+    overflow: hidden;
+}
+/*TOP PLACES======================================================*/
+
+
+
+/*VIDEOS*/
+.videos{
+    width: 100%;
+}
+
+.videos__container{
+    max-width: 2500px;
+    margin: 0 auto;
+    position: relative;
+}
+
+.video__item{
+    padding-top: 56.25%;
+}
+
+.video__elem{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+/*VIDEOS=============================================================*/
+
+
+
+/*FOOTER*/
+.footer{
+    width: 100%;
+    background-color: #0E1D28;
+}
+.footer__inner{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 120px 0;
+}
+.footer__nav{
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.footer__logo{
+    width: 50%;
+}
+.footer__logo__img{
+    height: 64px;
+    width: 170px;
+}
+
+.footer__nav__item{
+    text-decoration: none;
+    color: #FFFFFF;
+    margin-bottom: 4px;
+}
+.footer__nav__title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.3;
+}
+.footer__nav__link{
+    color: inherit;
+    font-size: 16px;
+    line-height: 1.5;
+
+    transition: opacity 0.7s linear;
+}
+
+.footer__nav__link:hover, .footer__nav__link:focus, .footer__nav__link:active {
+    opacity: .7;
+}
+
+
+/*/FOOTER==========================================================*/
